Removed 100vh height to squash a margin bug

--- a/public/stylesheets/components/header.styl
+++ b/public/stylesheets/components/header.styl
@@ -5,9 +5,9 @@ header
   .hero
     position relative
     width 100%
-    height 100vh
     margin-bottom 60px
     flexbox()
+
 
     .ace
       display none
@@ -19,10 +19,6 @@ header
         height 97px
         top 35px
         left 42px
-
-    & > img
-      width 100%
-      height 100%
 
     .flip
       flipit()
